--- a/index.html
+++ b/index.html
@@ -57,8 +57,33 @@
            
                 </div>
             </div>
-
-
+        </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+.skill-description>lorem20 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScripts</p>
+                    <div class="skill-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum fugiat placeat unde, quae ratione quia obcaecati repudiandae reiciendis aliquam deleniti.</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <div class="skill-description">Error nesciunt quidem vitae, excepturi dolore repellendus accusamus nobis! Inventore quos iusto vitae est obcaecati dolores repellat asperiores commodi. Molestiae.</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">Node JS</p>      
+                    <div class="skill-description">Voluptatem maxime quae aliquam eligendi a. Nam iste sed distinctio in beatae fugit, at exercitationem reprehenderit dolorem adipisci! Dolore, praesentium!</div>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Mongodb</p>
+                    <div class="skill-description">Sunt dolor veritatis, dignissimos error repellendus ab eos nostrum saepe nam ea omnis quidem blanditiis consequatur expedita ipsam porro minus?</div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
