--- a/index.html
+++ b/index.html
@@ -159,36 +159,34 @@
 
         </section>
         <!-- contact section -->
-        <section>
-            <h2 class="section-title">Let's Contact</h2>
-            <div class="contact">
-                <div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam delectus culpa ratione, impedit
-                        architecto consequatur necessitatibus magnam iste eius facilis adipisci eaque corporis labore
-                        ullam
-                        minus nulla. Libero, fuga eaque.
-                    </p>
-                    <a href="">
-                        <img src="images/icons/facebook.png" alt="">
-                    </a>
-                    <a href="">
-                        <img src="images/icons/twitter.png" alt="">
-                    </a>
-                    <a href="">
-                        <img src="images/icons/insta.png" alt="">
-                    </a>
-                </div>
-                <div>
-                    <h3 class="section-title">Let's Message Me</h3>
-                    <form action="">
-                        <input type="text" name="" placeholder="Your Name">
-                        <input type="email" name="" id="" placeholder="Your Email">
-                        <textarea name="" id="" cols="30" rows="10" placeholder="Massage">
+        <section class="contact">
+            <div>
+                <h2 class="contact-section-title">Let's Contact</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam delectus culpa ratione, impedit
+                    architecto consequatur necessitatibus magnam iste eius facilis adipisci eaque corporis labore
+                    ullam
+                    minus nulla. Libero, fuga eaque.
+                </p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h3 class="section-title">Let's Message Me</h3>
+                <form action="">
+                    <input type="text" name="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Massage">
                     </textarea>
-                        <input class="btn-primary" type="submit" value="Submit">
-                    </form>
-                </div>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
             </div>
         </section>
     </main>
