--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
         <!-- contact section -->
         <section class="contact">
             <div>
-                <h2 class="contact-section-title">Let's Contact</h2>
-                <p>
+                <h3 class="contact-section-title">Let's Contact</h3>
+                <p class="section-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam delectus culpa ratione, impedit
                     architecto consequatur necessitatibus magnam iste eius facilis adipisci eaque corporis labore
                     ullam
@@ -183,8 +183,7 @@
                 <form action="">
                     <input type="text" name="" placeholder="Your Name">
                     <input type="email" name="" id="" placeholder="Your Email">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Massage">
-                    </textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Massage"></textarea>
                     <input class="btn-primary" type="submit" value="Submit">
                 </form>
             </div>
